<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewChildActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/parent" />

    <TextView
        android:id="@+id/child_txt_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:text="@string/parent"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:textAppearance="@style/FontLText"
                android:text="@string/family" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:textAppearance="@style/FontLText"
                android:text="@string/name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:textAppearance="@style/FontLText"
                android:text="@string/patronymic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/birthday_shot"
                android:textAppearance="@style/FontLText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/child_edit_family"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/family"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:textAppearance="@style/FontRText" />

            <EditText
                android:id="@+id/child_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:textAppearance="@style/FontRText" />

            <EditText
                android:id="@+id/child_edit_patronymic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/patronymic"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:textAppearance="@style/FontRText" />

            <TextView
                android:id="@+id/child_txt_date_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                android:hint="@string/date_birthday"
                android:padding="5dp"
                android:textAppearance="@style/FontRText" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>