<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".NewWorkerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/family"
                android:textAppearance="@style/FontLText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/name"
                android:textAppearance="@style/FontLText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/patronymic"
                android:textAppearance="@style/FontLText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/birthday_shot"
                android:textAppearance="@style/FontLText" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/prof"
                android:textAppearance="@style/FontLText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/new_worker_edit_family"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/family"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:textAppearance="@style/FontRText" />

            <EditText
                android:id="@+id/new_worker_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:textAppearance="@style/FontRText" />

            <EditText
                android:id="@+id/new_worker_edit_patronymic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/patronymic"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:textAppearance="@style/FontRText" />

            <TextView
                android:id="@+id/new_worker_edit_date_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                android:editable="false"
                android:ems="10"
                android:focusable="true"
                android:hint="@string/date_birthday"
                android:padding="5dp"
                android:textAppearance="@style/FontRText" />

            <EditText
                android:id="@+id/new_worker_edit_prof"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/prof"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:textAppearance="@style/FontRText" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/worker_nchild"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/n_children" />

        <ImageView
            android:id="@+id/worker_btn_add_child"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="30dp"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@android:drawable/ic_input_add" />

    </FrameLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/worker_list_of_children"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@color/garey5"
        android:padding="5dp" />

</LinearLayout>